# Evaluation-Selection

./: README.md  mypy.ini  noxfile.py  pyproject.toml  train.py
src/Forest/: data.py  train.py
test/: test_train.py
