[tool.poetry]
name = "Evaluation-Selection"
version = "0.1.0"
description = "my homework"
authors = ["Alexey Zubar"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.27.1"
pandas = "^1.4.2"
sklearn = "^0.0"
scikit-learn = "^1.0.2"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
